<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_toast"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_toast" />

        <Button
            android:id="@+id/activity_inject_fragment"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_inject_fragment" />

        <Button
            android:id="@+id/activity_executor"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_executor" />

        <Button
            android:id="@+id/activity_handler"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_handler" />

        <Button
            android:id="@+id/activity_service"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_service" />

        <Button
            android:id="@+id/activity_broadcast"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_broadcast" />

        <Button
            android:id="@+id/activity_notification"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_notification" />

        <Button
            android:id="@+id/activity_so_files"
            style="@style/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_so_files" />
    </LinearLayout>
</ScrollView>